--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
   <title>Budget Tracker</title>
 </head>
@@ -18,19 +19,35 @@
       <div class="total">Your total is: $<span id="total">0</span></div>
     </div>
 
+    <!-- <form>
+   
+  </form> -->
+  
+
+
+
     <div class="form">
-      <input type="text" id="t-name" placeholder="Name of transaction" />
-      <input type="number" min="0" id="t-amount" placeholder="Transaction amount" />
-      <button id="add-btn"><i class="fa fa-plus buttons"></i> Add Funds</button>
-      <button id="sub-btn"><i class="fa fa-minus"></i> Subtract Funds</button>
+      <div class="form-row" style="text-align: left;">
+        <div class="form-group col-md-6">
+          <label for="inputEmail4">Transaction:</label>
+          <input type="text" id="t-name" placeholder="Name of transaction" class="form-control">
+        </div>
+        <div class="form-group col-md-6">
+          <label for="inputPassword4">Amount:</label>
+          <input type="number" min="0" id="t-amount" placeholder="Transaction amount" class="form-control">
+        </div>
       <p class="error"></p>
+
+      </div>
+      <button id="add-btn" class="btn btn-primary btn-lg"><i class="fa fa-plus buttons"></i> Add Funds</button>
+      <button id="sub-btn" class="btn btn-secondary btn-lg"><i class="fa fa-minus"></i> Subtract Funds</button>
     </div>
 
     <div class="transactions">
       <table>
         <thead>
-          <th>Transaction</th>
-          <th>Amount</th>
+          <th>Transaction History</th>
+          <th>Amount History</th>
         </thead>
         <tbody id="tbody">
           
